@@ -586,6 +586,7 @@ Other memory:
 
 	* Added stat() to fs layer
 	* Added stat() supported to FAT
+	* Fixed reference counting errors associated with mounted filesystems
 	* Started m68322
 </pre></ul>
 
