@@ -152,5 +152,6 @@
 
 	* Added stat() to fs layer
 	* Added stat() supported to FAT
+	* Fixed reference counting errors associated with mounted filesystems
 	* Started m68322
 
